--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,6 +21,57 @@
             .then(response => response.text())
             .then(data => console.log(data))
             .catch((error) => console.error('Error:', error));
+        }
+    </script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Timestamp and Feedback</title>
+</head>
+<body>
+    <button onclick="saveTimestamp()">Save Timestamp</button>
+    <br>
+    <textarea id="feedback" placeholder="Enter feedback..."></textarea>
+    <br>
+    <button onclick="sendData()">Submit Feedback</button>
+    
+    <script>
+        function saveTimestamp() {
+            let timestamp = new Date().toISOString();
+            document.getElementById('feedback').value = timestamp;
+        }
+
+        function sendData() {
+            let timestamp = new Date().toISOString();
+            let feedback = document.getElementById('feedback').value;
+
+            let data = {
+                timestamp: timestamp,
+                feedback: feedback
+            };
+
+            fetch('https://script.google.com/macros/s/AKfycbxmVzICB3VJ1CBAknVCTq7sbfHRFucbKwriEJhYFrb8O-jc-T2agGciCLAXjdtVpYwa/exec', {
+                method: 'POST',
+                payload: JSON.stringify(data),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+            .then(response => response.json())
+            .then(data => {
+                if(data.status === "success") {
+                    alert("Data saved successfully!");
+                }
+            })
+            .catch(error => {
+                console.error("Error:", error);
+                alert("An error occurred!");
+            });
         }
     </script>
 </body>
