--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 method: 'POST',
                 payload: JSON.stringify(data),
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/x-www-form-urlencoded'
                 }
             })
             .then(response => response.json())
