--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timestamp Button</title>
     <style>
-        #feedbackSection {
-            display: none;
+        /* Basic reset and page styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f7f9fc;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        /* Button styling */
+        button {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin-top: 10px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+
+        button:hover {
+            background-color: #2980b9;
+        }
+
+        /* Textarea styling */
+        textarea {
+            width: 100%;
+            max-width: 300px;
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+
+        /* Centering content for mobile devices and making it responsive */
+        @media (max-width: 600px) {
+            body {
+                padding: 20px;
+            }
         }
     </style>
 </head>
