--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             border: 1px solid #ccc;
         }
 
+        #feedbacksection{
+            display: none;
+        }
+
         /* Centering content for mobile devices and making it responsive */
         @media (max-width: 600px) {
             body {
