--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             border: 1px solid #ccc;
         }
 
-        #feedbacksection{
+        feedbacksection{
             display: none;
         }
 
