--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             border: 1px solid #ccc;
         }
 
-        feedbackSection{
+        #feedbackSection{
             display: none;
         }
 
@@ -111,3 +111,4 @@ function saveTimestamp() {
     </script>
 </body>
 </html>
+
