--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ function saveTimestamp() {
             var formData = new URLSearchParams();
             formData.append('timestamp', timestamp);
     
-            fetch('https://script.google.com/macros/s/AKfycbwI10DR9FyQSfHmv-D1VCrgcl477H8klOTj6FbNvhA8MKL4cuTBMLuU4GyN-lCXLC_U/exec', {
+            fetch('https://script.google.com/a/macros/motional.com/s/AKfycbzjeKDHnkcpHQnFW2VaMykdBwyGIQWxR16ys2sx7DpWpfzA-itCpd-TTgzCGnfq1EbLRg/exec', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded'
@@ -92,7 +92,7 @@ function saveTimestamp() {
             var formData = new URLSearchParams();
             formData.append('feedback', feedback);
 
-            fetch('https://script.google.com/macros/s/AKfycbwI10DR9FyQSfHmv-D1VCrgcl477H8klOTj6FbNvhA8MKL4cuTBMLuU4GyN-lCXLC_U/exec', {
+            fetch('https://script.google.com/a/macros/motional.com/s/AKfycbzjeKDHnkcpHQnFW2VaMykdBwyGIQWxR16ys2sx7DpWpfzA-itCpd-TTgzCGnfq1EbLRg/exec', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded'
