--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
             display: none;
         }
 
+
+        #infoForm {
+            max-width: 500px; /* Adjust this value as needed */
+            margin: 0 auto;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: adds a shadow for better visibility */
+            background-color: white; /* Optional: change the background color */
+            border-radius: 8px; /* Optional: rounds the corners */
+        }
+
+    #infoForm input[type="text"] {
+            width: 100%; /* Full width of the form */
+            max-width: 480px; /* Adjust this value as needed */
+            padding: 12px; /* Increased padding for larger input fields */
+            margin-top: 10px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+
+    #infoForm button {
+            padding: 12px 20px; /* Larger button */
+            /* ... other button styles ... */
+        }
         /* Centering content for mobile devices and making it responsive */
         @media (max-width: 600px) {
             body {
