--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             console.log(response.text());
             document.getElementById('feedback').value = '';
             document.getElementById('feedbackSection').style.display = 'none';
-            document.getElementById('timestampButton').style.display = 'block';
+            document.getElementById('imageButtons').style.display = 'block';
         })
         .catch((error) => console.error('Error:', error));
     }
