--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
         formData.append('timestamp', timestamp);
         formData.append('imageName', imageName);
 
+        sessionStorage.setItem('imageName', imageName);
+
         fetch('https://script.google.com/macros/s/AKfycbx_iCZRVAh8GfzwF3Bq5aj_MnMIg9Kt1R_2lshN7jh-P_CUVAJGMTZ9vXb10Fx0dJ_GaA/exec', {
             method: 'POST',
             headers: {
@@ -189,7 +191,7 @@
         var feedback = document.getElementById('feedback').value;
         var timestamp = new Date().toUTCString();
         var uniqueId = sessionStorage.getItem('uniqueId');
-        var imageName = document.getElementById('imageButtons');
+        var imageName = document.getElementById('imageName');
 
         var formData = new URLSearchParams();
         formData.append('uniqueId', uniqueId);
