--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     </div>
     
     <div id="imageButtons" style="display:none;">
-        <img src="up.png" alt="Image1" onclick="saveTimestamp('Image1')" />
-        <img src="down.png" alt="Image2" onclick="saveTimestamp('Image2')" />
+        <img src="up.png" alt="Image1" onclick="saveTimestamp('positive')" />
+        <img src="down.png" alt="Image2" onclick="saveTimestamp('negative')" />
     </div>
 
     <div id="feedbackSection" style="display:none;">
