--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
         }
 
         #endRide button {
-            display: block;
+            position: absolute; /* Absolute positioning */
+            bottom: 50px;       /* 20px from the bottom */
+            right: 50px;        /* 20px from the right */
+            padding: 30px 40px; /* Adjust padding as needed */
             margin: 20px auto;
             padding: 12px 20px;
             background-color: #eb1c1c;
