--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
     }
 
     function submitRating(starCount) {
+        var uniqueId = sessionStorage.getItem('uniqueId'); // Retrieve the unique ID from sessionStorage
         var formData = new URLSearchParams();
         formData.append('action', 'submitRating');
         formData.append('starRating', starCount);
